# orynvae

./: .gitignore  AGENTS.md  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  json_output.py  prompts.py  registry.py  service.py  sse.py
backend/app/api/: ai_actions.py  chapters.py  characters.py  debug.py  health.py  memory.py  projects.py  providers.py  router.py  runtime.py  sessions.py  settings.py  story_lines.py
backend/app/cli/: db_init.py  dev.py
backend/app/core/: config.py  debug_logging.py
backend/app/models/: __init__.py  ai_actions.py  chapters.py  memory.py  narrator_sessions.py  project_ai_settings.py  projects.py  providers.py  runtime.py  settings.py  stage7.py  start_story.py  story_lines.py  story_runtime.py
backend/app/providers/: __init__.py  adapters.py
backend/app/services/: __init__.py  chapters.py  character_store.py  memory.py  (+10 more)
backend/migrations/: 001_initial.sql  002_provider_state.sql  003_canon_workspace.sql  004_provider_model_preferences.sql  005_project_visibility.sql  006_character_crud.sql  007_v2_runtime_schema.sql  008_hidden_projects.sql  008_session_suggested_actions.sql  009_narrator_agent_and_replay.sql  010_chapter_reviews.sql  011_project_ai_settings.sql
backend/tests/: test_ai_actions.py  test_characters.py  test_debug_logs.py  test_health.py  test_memory_workspace.py  test_migrations.py  test_narrator_sessions.py  test_projects.py  test_providers.py  test_stage7.py  test_start_story.py  test_story_lines_chapters.py  test_story_runtime_store.py
(+319 files in other folders)
